# customerSupportMCP1

./: .dockerignore  .gitignore  README.md
NeoArchAI/: .env.example  .gitignore  README.md  config.py  main.py  mcp_server.py  requirements.txt
NeoArchAI/agents/: design_crew.py
NeoArchAI/api/: routes.py
NeoArchAI/graph/: design_graph.py  nodes.py  state.py
NeoArchAI/models/: schemas.py
NeoArchAI/static/: index.html
NeoArchAI/tools/: floor_plan_2d.py  model_3d.py  report_gen.py
customersupportmcp/: .dockerignore  .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
customersupportmcp-client/: chat.py  config.py  demo.py  mcp_client.py
customersupportmcp-ui/: README.md  docker-compose.yml
customersupportmcp-ui/backend/: .dockerignore  Dockerfile  main.py  requirements.txt
customersupportmcp-ui/frontend/: .dockerignore  (+6 more)
customersupportmcp/agent/: graph.py
customersupportmcp/core/: logging_config.py  rate_limiter.py
customersupportmcp/data/: database.py  knowledge_base.json  mock_orders.json  rag_store.py  tickets.json
customersupportmcp/gateway/: __init__.py  middleware.py
customersupportmcp/model/: __init__.py  schemas.py
customersupportmcp/prompts/: system_prompt.txt
customersupportmcp/tests/: conftest.py
customersupportmcp/tests/integration/: test_agent.py
customersupportmcp/tests/unit/: test_kb_tools.py  test_order_tools.py  test_rate_limiter.py  test_ticket_tools.py
customersupportmcp/tools/: customer_tools.py  kb_tools.py  order_tools.py  rag_tools.py  ticket_tools.py
(+51 files in other folders)
