[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-support-mcp"
version = "1.0.0"
description = "Production-grade AI customer support MCP server with LangGraph + Groq/Ollama fallback"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "langchain",
    "langchain-groq",
    "langchain-core",
    "langchain-ollama",
    "langgraph",
    "langsmith",
    "python-dotenv",
    "pydantic>=2.0",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "WARNING"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
